// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Logo Large 1`] = `
<svg
  className="l"
>
  Logo.svg
</svg>
`;

exports[`Storyshots Logo Medium 1`] = `
<svg
  className="m"
>
  Logo.svg
</svg>
`;

exports[`Storyshots Logo Original Size 1`] = `
<svg>
  Logo.svg
</svg>
`;

exports[`Storyshots Logo Small 1`] = `
<svg
  className="sm"
>
  Logo.svg
</svg>
`;
